--- a/templates/EventList.html
+++ b/templates/EventList.html
@@ -37,7 +37,7 @@
     <div class="span3 statbox green" onTablet="span8" onDesktop="span3">
         <!--<div class="boxchart">{{ monedas.trm.ultimo_valor.valor }}</div>-->
         <div class="number">{{monedas.trm.ultimo_valor.valor}}<i class="icon-arrow-up"></i></div>
-        <div class="title">{{monedas.trm.ultimo_valor.nombre + ' ' + monedas.trm.ultimo_valor.fecha}}</div>
+        <div class="title">{{monedas.trm.ultimo_valor.nombre_mostrar + ' ' + monedas.trm.ultimo_valor.fecha}}</div>
         <!--<div class="footer">
             <a href="#">Detalles</a>
         </div>-->
